Fix for Helm 2.17
- and is not an infix operator
- `nil|boolean` is not a type so force a default on auto_discover

--- a/values.yaml
+++ b/values.yaml
@@ -25,7 +25,7 @@ api:
   autocomplete:
     exclude_address_length: 0
   targets:
-    auto_discover: null # use default value
+    auto_discover: true # use default value
   exposeInternalDebugTools: false
   requests:
     memory: 0.25Gi
